force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewOtherLavAeratorsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewOtherLavAeratorsCnt__c</fullName>
    <description>Number of other lavatory aerators</description>
    <inlineHelpText>Enter the number of new lavatory aerators included in the project building scope.</inlineHelpText>
    <label>Number of Lavatory Aerators</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>