force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewOtherLavSensorsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewOtherLavSensorsCnt__c</fullName>
    <description>Number of other lavatory sensors</description>
    <inlineHelpText>Enter the number of new lavatory sensors included in the project building scope.</inlineHelpText>
    <label>Number of Lavatory Sensors</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>