force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewOtherLowFlowFaucets__c.field-meta.xml
<CustomField>
    <fullName>NewOtherLowFlowFaucets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Other Low Flow Faucets</description>
    <inlineHelpText>Select the checkbox if new low-flow faucets are included in the project building scope.</inlineHelpText>
    <label>Low-Flow Faucets</label>
    <type>Checkbox</type>
</CustomField>