force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewOtherLowFlowShowerheads__c.field-meta.xml
<CustomField>
    <fullName>NewOtherLowFlowShowerheads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Other Low Flow Showerheads</description>
    <inlineHelpText>Select the checkbox if new low-flow faucets are included in the project building scope.</inlineHelpText>
    <label>Low-Flow Showerheads</label>
    <type>Checkbox</type>
</CustomField>