force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewOtherLowFlowShowerheadsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewOtherLowFlowShowerheadsCnt__c</fullName>
    <description>Number of low flow showerheads</description>
    <inlineHelpText>Enter the number of new low-flow faucets included in the project building scope.</inlineHelpText>
    <label>Number of Low-Flow Showerheads</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>