force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewOtherWatersenseFempDevices__c.field-meta.xml
<CustomField>
    <fullName>NewOtherWatersenseFempDevices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Other Watersense FEMP Devices</description>
    <inlineHelpText>Select the checkbox if Watersense/FEMP approved devices are included in the project building scope.</inlineHelpText>
    <label>Watersense/FEMP Devices</label>
    <type>Checkbox</type>
</CustomField>