force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewOtherWatersenseFempDevicesCnt__c.field-meta.xml
<CustomField>
    <fullName>NewOtherWatersenseFempDevicesCnt__c</fullName>
    <description>Number of Other Watersense/FEMP devices</description>
    <inlineHelpText>Enter the number of Watersense/FEMP approved devices included in the project building scope.</inlineHelpText>
    <label>Number of Watersense/FEMP Devices</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>