force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinals0Pt125Gpf__c.field-meta.xml
<CustomField>
    <fullName>NewUrinals0Pt125Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Urinals high-efficiency 0_125 GPF</description>
    <inlineHelpText>Select the checkbox if new high-efficiency 0.125 GPF (gallons per flush) urinals are included in the project building scope.</inlineHelpText>
    <label>New high-efficiency 0.125 GPF Urinals</label>
    <type>Checkbox</type>
</CustomField>