force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinals0Pt125GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>NewUrinals0Pt125GpfCnt__c</fullName>
    <description>Number of New Urinals 0_125 GPF</description>
    <inlineHelpText>Enter the number of new 0.125 GPF (gallons per flush) urinals included in the project building scope.</inlineHelpText>
    <label>Number of New 0.125 GPF Urinals</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>