force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinals0Pt5Gpf__c.field-meta.xml
<CustomField>
    <fullName>NewUrinals0Pt5Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Urinals low-flow 0_5 GPF</description>
    <inlineHelpText>Select the checkbox if new low-flow 0.5 GPF (gallons per flush) urinals are included in the project building scope.</inlineHelpText>
    <label>New low-flow 0.5 GPF Urinals</label>
    <type>Checkbox</type>
</CustomField>