force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinals0Pt5GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>NewUrinals0Pt5GpfCnt__c</fullName>
    <description>Urinals 0_5 GPF Number</description>
    <inlineHelpText>Enter the number of new 0.5 GPF (gallons per flush) urinals included in the project building scope.</inlineHelpText>
    <label>Number of New 0.5 GPF Urinals</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>