force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinalsSensors__c.field-meta.xml
<CustomField>
    <fullName>NewUrinalsSensors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Urinals Sensors</description>
    <inlineHelpText>Select the checkbox if new urinal sensors are included in the project building scope.</inlineHelpText>
    <label>Urinal Sensors</label>
    <type>Checkbox</type>
</CustomField>