force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinalsSensorsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewUrinalsSensorsCnt__c</fullName>
    <description>Urinals Sensors Number</description>
    <inlineHelpText>Enter the number of new urinal sensors included in the project building scope.</inlineHelpText>
    <label>Number of New Urinal Sensors</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>