force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinalsWaterless__c.field-meta.xml
<CustomField>
    <fullName>NewUrinalsWaterless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Urinals Waterless</description>
    <inlineHelpText>Select the checkbox if new waterless urinals are included in the project building scope.</inlineHelpText>
    <label>Waterless Urinals</label>
    <type>Checkbox</type>
</CustomField>