force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewUrinalsWaterlessCnt__c.field-meta.xml
<CustomField>
    <fullName>NewUrinalsWaterlessCnt__c</fullName>
    <description>Urinals Waterless Number</description>
    <inlineHelpText>Enter the number of waterless urinals included in the project building scope.</inlineHelpText>
    <label>Number of Waterless Urinals</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>