force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewVestibuleEntrance__c.field-meta.xml
<CustomField>
    <fullName>NewVestibuleEntrance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if New Vestibule Entrance</description>
    <inlineHelpText>Select checkbox if a vestibule entrance is included in project building scope. A vestibule entrance is a room or hall between the entrance and the interior of the building; reduces exposure of the interior of the building to the exterior environment.</inlineHelpText>
    <label>New Vestibule Entrance</label>
    <type>Checkbox</type>
</CustomField>