force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWC1Pt28GpfToilets__c.field-meta.xml
<CustomField>
    <fullName>NewWC1Pt28GpfToilets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets high-efficiency 1_28 GPF Toilets</description>
    <inlineHelpText>Select the checkbox if new high-efficiency 1.28 GPF (gallons per flush) toilets are included in the project building scope.</inlineHelpText>
    <label>New high-efficiency 1.28 GPF Toilets</label>
    <type>Checkbox</type>
</CustomField>