force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWC1Pt6GpfToilets__c.field-meta.xml
<CustomField>
    <fullName>NewWC1Pt6GpfToilets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets  low-flow 1_6 GPF Toilets</description>
    <inlineHelpText>Select the checkbox if new low-flow 1.6 GPF (gallons per flush) toilets are included in the project building scope.</inlineHelpText>
    <label>New low-flow 1.6 GPF Toilets</label>
    <type>Checkbox</type>
</CustomField>