force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWC1Pt6GpfToiletsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWC1Pt6GpfToiletsCnt__c</fullName>
    <description>Number of Water Closets 1_6 GPF Toilets</description>
    <inlineHelpText>Enter the number of new 1.6 GPF (gallons per flush) toilets included in the project building scope.</inlineHelpText>
    <label>Number of New 1.6 GPF Toilets</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>