force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCDualFlushValves__c.field-meta.xml
<CustomField>
    <fullName>NewWCDualFlushValves__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets Dual Flush Valves</description>
    <inlineHelpText>Select the checkbox if dual flush valves are included in the project building scope.</inlineHelpText>
    <label>Dual Flush Valves</label>
    <type>Checkbox</type>
</CustomField>