force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCDualFlushValvesCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWCDualFlushValvesCnt__c</fullName>
    <description>Number of Water Closets Dual Flush Valves</description>
    <inlineHelpText>Enter the number of dual flush valves included in the project building scope.</inlineHelpText>
    <label>Number of Dual Flush Valves</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>