force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCLavAerators__c.field-meta.xml
<CustomField>
    <fullName>NewWCLavAerators__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets Lavatory Aerators</description>
    <inlineHelpText>Select the checkbox if lavatory aerators are included in the project building scope.</inlineHelpText>
    <label>Lavatory Aerators</label>
    <type>Checkbox</type>
</CustomField>