force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCLavAeratorsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWCLavAeratorsCnt__c</fullName>
    <description>Number of Water Closets Lavatory Aerators</description>
    <inlineHelpText>Enter the number of lavatory aerators included in the project building scope.</inlineHelpText>
    <label>Number of Lavatory Aerators</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>