force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCLavSensors__c.field-meta.xml
<CustomField>
    <fullName>NewWCLavSensors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets Lavatory Sensors</description>
    <inlineHelpText>Select the checkbox if lavatory sensors are included in the project building scope.</inlineHelpText>
    <label>Lavatory Sensors</label>
    <type>Checkbox</type>
</CustomField>