force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCLavSensorsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWCLavSensorsCnt__c</fullName>
    <description>Number of Water Closets Lavatory Sensors</description>
    <inlineHelpText>Enter the number of lavatory sensors included in the project building scope.</inlineHelpText>
    <label>Number of Lavatory Sensors</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>