force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCPressureAssistToilet__c.field-meta.xml
<CustomField>
    <fullName>NewWCPressureAssistToilet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets Pressure Assist Toilet</description>
    <inlineHelpText>Select the checkbox if pressure assist toilets are included in the project building scope.</inlineHelpText>
    <label>Pressure Assist Toilets</label>
    <type>Checkbox</type>
</CustomField>