force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCPressureAssistToiletCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWCPressureAssistToiletCnt__c</fullName>
    <description>Number of Water Closets Pressure Assist Toilet</description>
    <inlineHelpText>Enter the number of pressure assist toilets included in the project building scope.</inlineHelpText>
    <label>Number of Pressure Assist Toilets</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>