force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCToiletSensors__c.field-meta.xml
<CustomField>
    <fullName>NewWCToiletSensors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets Toilet Sensors</description>
    <inlineHelpText>Select the checkbox if toilet sensors are included in the project building scope.</inlineHelpText>
    <label>Toilet Sensors</label>
    <type>Checkbox</type>
</CustomField>