force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCToiletSensorsCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWCToiletSensorsCnt__c</fullName>
    <description>Number of Water Closets Toilet Sensors</description>
    <inlineHelpText>Enter the number of toilet sensors included in the project building scope.</inlineHelpText>
    <label>Number of Toilet Sensors</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>