force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCUltraLowToilet__c.field-meta.xml
<CustomField>
    <fullName>NewWCUltraLowToilet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Water Closets  &lt;1.28 GPF toilets</description>
    <inlineHelpText>Select the checkbox if new &lt;1.28 GPF toilets are included in the project building scope.</inlineHelpText>
    <label>New &lt;1.28 GPF toilets</label>
    <type>Checkbox</type>
</CustomField>