force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCUltraLowToiletCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWCUltraLowToiletCnt__c</fullName>
    <description>Number of New Water Closets Ultra low Toilet</description>
    <inlineHelpText>Enter the number of ultra low-flow toilets included in the project building scope.</inlineHelpText>
    <label>Number of Ultra Low-Flow Toilets</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>