force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewWCUltratolowToiletCnt__c.field-meta.xml
<CustomField>
    <fullName>NewWCUltratolowToiletCnt__c</fullName>
    <description>Number of Water Closets new &lt;1.28 GPF Toilet</description>
    <inlineHelpText>Enter the number of New &lt;1.28 GPF toilets included in the project building scope.</inlineHelpText>
    <label>Number of New &lt;1.28 GPF toilets</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>