force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NoCntrl__c.field-meta.xml
<CustomField>
    <fullName>NoCntrl__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if No Control</description>
    <inlineHelpText>Indicates if No Control</inlineHelpText>
    <label>No Control</label>
    <type>Checkbox</type>
</CustomField>