force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NonChemicalWaterTreatment__c.field-meta.xml
<CustomField>
    <fullName>NonChemicalWaterTreatment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if a non-chemical water treatment is included in project building scope.</description>
    <inlineHelpText>Select the checkbox if a non-chemical water treatment is included in project building scope.</inlineHelpText>
    <label>Non-Chemical Water Treatment</label>
    <type>Checkbox</type>
</CustomField>