force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OccupantCntrllability__c.field-meta.xml
<CustomField>
    <fullName>OccupantCntrllability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Occupant Controllability</description>
    <inlineHelpText>Select checkbox if occupant controllability is included in project building scope.</inlineHelpText>
    <label>Occupant Controllability</label>
    <type>Checkbox</type>
</CustomField>