force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OccupantThermalComfortSys__c.field-meta.xml
<CustomField>
    <fullName>OccupantThermalComfortSys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Occupant Thermal Comfort Systems</description>
    <inlineHelpText>Select checkbox if occupant thermal comfort systems are included in project building scope.</inlineHelpText>
    <label>Occupant Thermal Comfort Systems</label>
    <type>Checkbox</type>
</CustomField>