force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OccVacancySensors__c.field-meta.xml
<CustomField>
    <fullName>OccVacancySensors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Occupancy or Vacancy Sensors</description>
    <inlineHelpText>Select checkbox if occupancy or vacancy sensors are included in project building scope.</inlineHelpText>
    <label>Occupancy/Vacancy Sensors</label>
    <type>Checkbox</type>
</CustomField>