force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OccVacancySensorsForTaskLighting__c.field-meta.xml
<CustomField>
    <fullName>OccVacancySensorsForTaskLighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Occupancy or Vacancy Sensors for Task Lighting</description>
    <inlineHelpText>Select checkbox if occupancy or vacancy sensors for task lighting are included in project building scope.</inlineHelpText>
    <label>Occupancy/Vacancy Sensors Task Lighting</label>
    <type>Checkbox</type>
</CustomField>