force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OperableWindows__c.field-meta.xml
<CustomField>
    <fullName>OperableWindows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Operable Windows</description>
    <inlineHelpText>Select the checkbox if operable windows are included in project building scope. Operable windows are windows that occupants can open and close.</inlineHelpText>
    <label>Operable Windows</label>
    <type>Checkbox</type>
</CustomField>