force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OriginallyIntendedForDaylighting__c.field-meta.xml
<CustomField>
    <fullName>OriginallyIntendedForDaylighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Originally Intended for Daylighting</description>
    <inlineHelpText>Please select the checkbox if the original design intent for this building included daylighting.</inlineHelpText>
    <label>Daylighting Included in Orig Bldg Design</label>
    <type>Checkbox</type>
</CustomField>