force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OtherSpecify__c.field-meta.xml
<CustomField>
    <fullName>OtherSpecify__c</fullName>
    <description>Text box for Other</description>
    <inlineHelpText>Please specify other.</inlineHelpText>
    <label>Other, Please Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>