force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OutdoorSolarCntrl__c.field-meta.xml
<CustomField>
    <fullName>OutdoorSolarCntrl__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Outdoor Solar Control</description>
    <inlineHelpText>Select the checkbox if outdoor solar control (shading device, frit...etc.) is included in the project building scope. Outdoor solar control is an outdoor device that can limit a building&apos;s solar exposure.</inlineHelpText>
    <label>Provide Outdoor Solar Control</label>
    <type>Checkbox</type>
</CustomField>