force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/OutsideAirModulationInfo__c.field-meta.xml
<CustomField>
    <fullName>OutsideAirModulationInfo__c</fullName>
    <description>Outside Air modulation or information pick list</description>
    <inlineHelpText>If carbon dioxide space sensors are included in project, select if outside air modulation or information only.</inlineHelpText>
    <label>Outside Air Modulation Or Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InformationOnly</fullName>
            </value>
            <value>
                <fullName>OutsideAirModulation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>