force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/PhotocellsDaylightSwitching__c.field-meta.xml
<CustomField>
    <fullName>PhotocellsDaylightSwitching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Photocells Daylight Switching</description>
    <inlineHelpText>Select checkbox if installation of photocells or daylight switching is included in project building scope.</inlineHelpText>
    <label>Photocells Daylight Switching</label>
    <type>Checkbox</type>
</CustomField>