force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/PipingInsulationInst__c.field-meta.xml
<CustomField>
    <fullName>PipingInsulationInst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Piping insulation installation</description>
    <inlineHelpText>Select checkbox if installation of piping insulation is included in project building scope.</inlineHelpText>
    <label>Additional/New Piping Insulation</label>
    <type>Checkbox</type>
</CustomField>