force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/PlugTimers__c.field-meta.xml
<CustomField>
    <fullName>PlugTimers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Plug Timers</description>
    <inlineHelpText>Select the checkbox if plug timers are included to reduce plug-load.</inlineHelpText>
    <label>Plug Timers</label>
    <type>Checkbox</type>
</CustomField>