force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/PowerFactorCorrection__c.field-meta.xml
<CustomField>
    <fullName>PowerFactorCorrection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Power Factor Correction</description>
    <inlineHelpText>Select the check box if power factor correction is included in project building scope.</inlineHelpText>
    <label>Power Factor Correction</label>
    <type>Checkbox</type>
</CustomField>