force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/PowerQualityUpgs__c.field-meta.xml
<CustomField>
    <fullName>PowerQualityUpgs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Power Quality Upgrades</description>
    <inlineHelpText>Select the checkbox if power quality upgrades are included in project building scope.</inlineHelpText>
    <label>Power Quality Upgrades</label>
    <type>Checkbox</type>
</CustomField>