force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ProductionManufacturingImprovements__c.field-meta.xml
<CustomField>
    <fullName>ProductionManufacturingImprovements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Production and/or Manufacturing Improvements</description>
    <inlineHelpText>Select the checkbox if production and/or manufacturing improvements are included project building scope.</inlineHelpText>
    <label>Production/Manufacturing Improvements</label>
    <type>Checkbox</type>
</CustomField>