force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <description>System protocol pick list</description>
    <inlineHelpText>Please select system protocol.</inlineHelpText>
    <label>Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bacnet</fullName>
            </value>
            <value>
                <fullName>Lonworks</fullName>
            </value>
            <value>
                <fullName>SystemStillProprietary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>