force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/PvArrayCnt__c.field-meta.xml
<CustomField>
    <fullName>PvArrayCnt__c</fullName>
    <description>Number of PV Arrays</description>
    <inlineHelpText>Indicate number of PV arrays.</inlineHelpText>
    <label>Number of PV Arrays</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>