force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RadiantFlooring__c.field-meta.xml
<CustomField>
    <fullName>RadiantFlooring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if Radiant Flooring is included in project building scope</description>
    <inlineHelpText>Select the checkbox if Radiant Flooring is included in project building scope</inlineHelpText>
    <label>Radiant Flooring</label>
    <type>Checkbox</type>
</CustomField>