force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/Rahd_ProjectBldgParentId__c.field-meta.xml
<CustomField>
    <fullName>Rahd_ProjectBldgParentId__c</fullName>
    <description>This is the parent ID for this object&apos;s RAHD_ProjectBuilding</description>
    <inlineHelpText>This is the parent ID for this object&apos;s RAHD_ProjectBuilding</inlineHelpText>
    <label>RAHD_Project Building Parent ID</label>
    <referenceTo>PBS_gBUILD_ProjectBuilding__c</referenceTo>
    <relationshipLabel>gBUILD Scope Systems</relationshipLabel>
    <relationshipName>C_PBS_gBUILD_PBuildingScopeSystem_P_PBS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>