force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RainwaterCollection__c.field-meta.xml
<CustomField>
    <fullName>RainwaterCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if rainwater collection is included in project building scope. Rainwater collection is the collection of rain water for reuse.</description>
    <inlineHelpText>Select the checkbox if rainwater collection is included in project building scope. Rainwater collection is the collection of rain water for reuse.</inlineHelpText>
    <label>Rainwater Collection</label>
    <type>Checkbox</type>
</CustomField>