force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RebalancingAir__c.field-meta.xml
<CustomField>
    <fullName>RebalancingAir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Rebalancing Air</description>
    <inlineHelpText>Select the checkbox if rebalancing air is included in project building scope.</inlineHelpText>
    <label>Rebalancing Air</label>
    <type>Checkbox</type>
</CustomField>