force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RebalancingWater__c.field-meta.xml
<CustomField>
    <fullName>RebalancingWater__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Rebalancing Water</description>
    <inlineHelpText>Select the checkbox if rebalancing water is included in project building scope.</inlineHelpText>
    <label>Rebalancing Water</label>
    <type>Checkbox</type>
</CustomField>