force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RecommStudyDonePriorInitiation__c.field-meta.xml
<CustomField>
    <fullName>RecommStudyDonePriorInitiation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Recommissioning Study Done Prior To Initiation</description>
    <inlineHelpText>Select the checkbox if a recommissioning (RCx) study was performed prior to the start of this project.</inlineHelpText>
    <label>RCx Study Done Prior To Project Start</label>
    <type>Checkbox</type>
</CustomField>