force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RecyclingOtherWasteStreamReductions__c.field-meta.xml
<CustomField>
    <fullName>RecyclingOtherWasteStreamReductions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Recycling and Other Waste Stream Reductions</description>
    <inlineHelpText>Select the checkbox if recycling and/or other waste stream reductions are included in project building scope.</inlineHelpText>
    <label>Recycling/Other Waste Stream Reductions</label>
    <type>Checkbox</type>
</CustomField>