force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ReflectanceIndoorSurfaces__c.field-meta.xml
<CustomField>
    <fullName>ReflectanceIndoorSurfaces__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Reflectance of Indoor Surfaces</description>
    <inlineHelpText>Select checkbox if reflectance of indoor surfaces is included in project building scope.</inlineHelpText>
    <label>Reflectance of Indoor Surfaces</label>
    <type>Checkbox</type>
</CustomField>