force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ReflSolarWindowTinting__c.field-meta.xml
<CustomField>
    <fullName>ReflSolarWindowTinting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Reflective Solar Window Tinting</description>
    <inlineHelpText>Select the checkbox if reflective solar window tinting is included in project building scope. Reflective solar window tinting is a highly-reflective outside layer with the purpose of rejecting solar heat.</inlineHelpText>
    <label>Reflective Solar Window Tinting</label>
    <type>Checkbox</type>
</CustomField>