force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RegionalBasInterface__c.field-meta.xml
<CustomField>
    <fullName>RegionalBasInterface__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Regional BAS Interface</description>
    <inlineHelpText>Select checkbox if the Building Automation System (BAS) will be interfaced with a regional monitoring as part of this project building scope.</inlineHelpText>
    <label>BAS Interfaced with Regional System</label>
    <type>Checkbox</type>
</CustomField>