force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/RemoteMonitoring__c.field-meta.xml
<CustomField>
    <fullName>RemoteMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Remote Monitoring</description>
    <inlineHelpText>Select the checkbox if remote monitoring is included in project building scope.</inlineHelpText>
    <label>Remote Monitoring</label>
    <type>Checkbox</type>
</CustomField>